<resources>
    <string name="app_name">Alke Wallet</string>
    <string name="txt_login1">El lugar mas seguro para tu dinero</string>
    <string name="txt_login2">Ya tienes cuenta?</string>
    <string name="txt_boton_login">Crear cuenta nueva</string>
    <string name="bt_sp_boton_login">Crear cuenta</string>
    <string name="lp_boton_login">Login</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_confirm_password">Reingresar Password</string>
    <string name="lp_titulo">Logea y empeza a tranferir!</string>
    <string name="lp_olvido_psw">Olvidaste tu password?</string>
    <string name="txt_lp_crear_cuenta">Crear una nueva cuenta</string>
    <string name="txt_sp_crear_cuenta">Ya tienes una cuenta??</string>
    <string name="sup_titulo">Registrarse y empezar a transferir</string>
    <string name="txt_ingresa_email">Ingrese su Email</string>
    <string name="lp_olvido_contraseña">Olvidaste tu password?</string>
    <string name="txt_ingresa_contraseña">Ingrese su password</string>
    <string name="txt_sp_nombre">Nombre</string>
    <string name="sp_txt_reingresar_password">Reingrese password</string>
    <string name="lbl_sp_reingresar_password">Reingrese password</string>
    <string name="lbl_sp_apellido">Apellido</string>
    <string name="sp_tienes_una_cuenta">Ya tienes una cuenta?</string>
    <string name="txt_ingresar_nombre">Ingrese nombre</string>
    <string name="txt_ingresar_apellido">Ingrese apellido</string>
    <string name="txt_ult_transacciones">Ultimas transacciones</string>
    <string name="txt_enviar_dinero">Enviar dinero</string>
    <string name="txt_ingresar_dinero">Ingresar dinero</string>
    <string name="txt_no_hay_transacciones">No hay transacciones registradas!</string>
    <string name="txt_cant_a_ingresar">Cantidad a ingresar</string>
    <string name="txt_notas_de_transf">Notas de transferencia</string>
    <string name="txt_agregar_notas">Agregar notas de transferencia (opcional)</string>
    <string name="txt_mi_informacion">Mi información</string>
    <string name="txt_mis_tarjetas">Mis tarjetas</string>
    <string name="txt_Opciones">Opciones</string>
    <string name="txt_Centro_de_ayuda">Centro de ayuda</string>
    <string name="txt_Mi_perfil">Mi perfil</string>
    <string name="txt_amanda_alkemi">Amanda Alkemi</string>
    <string name="ultimas_transacciones">Ultimas transacciones</string>
    <string name="cantidad_a_transferir">Cantidad a transferir</string>
    <string name="ingrese_monto">Ingrese monto</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="ingresar_dinero">Ingresar Dinero</string>
    <string name="cantidad_a_ingresar">Cantidad a ingresar</string>
    <string name="txt_btn_ingresar_dinero">Ingresar Dinero</string>
</resources>