<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lpbackground"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/lp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/jua"
        android:text="@string/lp_titulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/lp_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/jua"
        android:text="@string/txt_email"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/lp_title"
        app:layout_constraintTop_toBottomOf="@+id/lp_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lp_enter_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textColorHint="@color/gris"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lp_email"
        app:layout_constraintTop_toBottomOf="@+id/lp_email"
        app:layout_constraintVertical_bias="0.018">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_campo"
            android:fontFamily="@font/jua"
            android:hint="@string/txt_ingresa_email"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/gris" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jua"
        android:text="@string/txt_password"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lp_enter_email"
        app:layout_constraintTop_toBottomOf="@+id/lp_enter_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textColorHint="@color/gris"
        app:hintEnabled="false"
        app:counterTextColor="@color/gris"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contrasena"
        app:layout_constraintTop_toBottomOf="@+id/contrasena">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_campo"
            android:fontFamily="@font/jua"
            android:hint="@string/txt_ingresa_contraseña"
            android:inputType="textPassword"
            android:textColorHighlight="@color/gris" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lp_olvido_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/jua"
        android:text="@string/lp_olvido_contraseña"
        android:textAlignment="textEnd"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/lp_button"
        style="@style/boton_celeste"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/azul"
        android:text="@string/lp_boton_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lp_olvido_password" />

    <TextView
        android:id="@+id/lp_crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/txt_lp_crear_cuenta"
        android:textAlignment="center"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lp_button"
        app:layout_constraintVertical_bias="0.333" />


</androidx.constraintlayout.widget.ConstraintLayout>