<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.ProfilePageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="330dp"
        android:background="@color/background_profile_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/jua"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/txt_Mi_perfil"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="131dp"
            android:layout_height="143dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/profile_picture" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/jua"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/txt_amanda_alkemi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/edit_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/mi_informacion"
            style="@style/boton_gris"
            android:layout_width="345dp"
            android:layout_height="64dp"
            android:layout_marginTop="44dp"
            android:drawableLeft="@drawable/icon"
            android:drawableRight="@drawable/arrow_icon"
            android:text="@string/txt_mi_informacion"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mis_tarjetas"
            style="@style/boton_gris"
            android:layout_width="345dp"
            android:layout_height="64dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/card_icon"
            android:drawableRight="@drawable/arrow_icon"
            android:text="@string/txt_mis_tarjetas"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mi_informacion" />

        <Button
            android:id="@+id/opciones"
            style="@style/boton_gris"
            android:layout_width="345dp"
            android:layout_height="64dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/settings_icon"
            android:drawableRight="@drawable/arrow_icon"
            android:text="@string/txt_Opciones"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mis_tarjetas" />

        <Button
            android:id="@+id/centro_de_ayuda"
            style="@style/boton_gris"
            android:layout_width="345dp"
            android:layout_height="64dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/help_icon"
            android:drawableRight="@drawable/arrow_icon"
            android:text="@string/txt_Centro_de_ayuda"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opciones" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>