<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPage"
    android:background="@drawable/lpbackground"><![CDATA[>





    ]]>

    <TextView
        android:id="@+id/lp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/jua"
        android:text="@string/sup_titulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/lp_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/txt_email"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="445dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lp_enter_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="352dp"
        android:textColorHint="@color/gris"
        app:counterTextColor="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lp_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/jua"
            android:hint="@string/txt_ingresa_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/azul"
            app:hintTextColor="@color/azul" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/txt_password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lp_email"
        tools:layout_editor_absoluteY="552dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:textColorHint="@color/gris"
        app:counterTextColor="@color/gris"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="588dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/jua"
            android:hint="@string/txt_ingresa_contraseña"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        style="@style/boton_celeste"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/azul"
        android:text="@string/txt_boton_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="766dp" />

    <TextView
        android:id="@+id/lp_crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/jua"
        android:text="@string/lp_crear_cuenta"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/lbl_sp_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="232dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="258dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="258dp">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_sp_apell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingresar nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lbl_sp_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apellido"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="335dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_sp_apell"
        android:layout_width="384dp"
        android:layout_height="55dp"
        android:layout_marginEnd="30dp"
        android:hint="Ingresar apellido"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="367dp" />

    <TextView
        android:id="@+id/lbl_sp_recontrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reingresar password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="665dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="720dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="hint"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="689dp" />

</androidx.constraintlayout.widget.ConstraintLayout>